# CPE464

./: .gitignore  README.md
lab-3/: Makefile  cclient  cclient.c  libPDU.c  pollLib.c  safeUtil.c  server.c
labs/lab01_cpe464/: Lab1_Worksheet_Spring_2023_online_v9.doc
labs/lab03_cpe464/: CMakeLists.txt  Makefile  README  libPDU.c  libPDU.h  networks.c  networks.h  safeUtil.c  safeUtil.h  server.h
labs/lab07_cpe464/: CMakeLists.txt  Makefile  rcopy.c  rcopy.h  safeUtil.c  server.c  server.h  udpPDU.c  udpPDU.h
labs/lab07_cpe464/given_files/: build464Lib.mk
labs/lab07_cpe464/given_files/libcpe464/: testRandError.sh
labs/lab07_cpe464/submission/: Makefile  submission.tar
network_testing/: CMakeLists.txt  network_testing.ioc
p0/: Makefile
p0/src/: CMakeLists.txt
project-0/: CMakeLists.txt
project-1/: CMakeLists.txt  Makefile  trace  trace.c  trace.h
project-1/libs/: checksum.c
project-1/submission/: Makefile  README  trace  trace.c  trace.h
project-1/testing/: Makefile  p1_test.sh
project-1/testing/diff/: Http.pcap.diff  IP_bad_checksum.pcap.diff  TCP_bad_checksum.pcap.diff  largeMix.pcap.diff  largeMix2.pcap.diff  mix_withIPoptions.pcap.diff  smallTCP.pcap.diff
project-1/testing/results/: Http.pcap.txt  largeMix.pcap.txt  largeMix2.pcap.txt  mix_withIPoptions.pcap.txt  smallTCP.pcap.txt
project-2/: CMakeLists.txt  Makefile  cclient  cclient.c  cclient.h  libPoll.c  libPoll.h  main.c  main.h  networkUtils.c  networkUtils.h  notes.txt  server  server.c  server.h  serverTable.h  test.c
project-2/given_files/: tcpUdpPollCode.tar
project-2/given_files/tcpUdpPollCode/: gethostbyname.c  gethostbyname.h  myClient.c  myServer.c  networks.c  networks.h  pollLib.c  pollLib.h  safeUtil.c  safeUtil.h
project-2/lib/: dictionary.c  dictionary.h  libPoll.c  networkUtils.c  networkUtils.h  serverTable.c  serverTable.h
project-2/libs/: dictionary.c  dictionary.h  network_utils.c  network_utils.h  serverTable.c  serverTable.h  user_packet.c  user_packet.h
project-2/src/: cclient.c  cclient.h  server.c  server.h  test.c
project01_cpe464/libs/: checksum.c
project01_cpe464/submission/: checksum.h  trace.h
project02_cpe464/: README  libPoll.h  networkUtils.h  test.c
projects/project01_cpe464/: CMakeLists.txt  Makefile  midterm.c  trace.c  trace.h
projects/project01_cpe464/submission/: README  home_eth_high_traffic.pcap  home_wifi_high_traffic.pcap
projects/project01_cpe464/testing/: p1_test.sh
projects/project02_cpe464/: CMakeLists.txt  libPoll.c  networkUtils.c  server.c  serverTable.c  serverTable.h  test.c
projects/project03_cpe464/: CMakeLists.txt  Makefile  README  cpe464.h  gethostbyname.c  gethostbyname.h  libPoll.c  libPoll.h  networkUtils.c  networkUtils.h  networks.c  newFile.txt  pollLib.c  pollLib.h  rcopy.c  rcopy.h  server.c  server.h  test.c  test.txt  testRandError.sh  udpPDU.c  udpPDU.h  windowLib.c  windowLib.h
projects/project03_cpe464/given_files/: build464Lib.mk
projects/project03_cpe464/given_files/libcpe464/: CMakeLists.txt  PacketManager.cpp  build464Lib.mk
projects/project03_cpe464/given_files/libcpe464/MsgEvents/: infoSeqNo.h
projects/project03_cpe464/submission/: Makefile
projects/project03_cpe464/testing/: .tmp  p3_testing.sh  rcopy_54321  server_54321  valgrind_testing
projects/project03_cpe464/testing/test_files/: large.txt  medium.txt
untitled/: main.c
